--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 altgraph==0.16.1
+certifi==2020.4.5.1
+chardet==3.0.4
+idna==2.9
 Inject==3.5.4
 pydux==0.2.2
 PyInstaller==3.6
 PyQt5==5.14.1
 PyQt5-sip==12.7.1
+requests==2.23.0
 six==1.14.0
+urllib3==1.25.9
