--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.16.1
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
+html5lib==1.0.1
 idna==2.9
 Inject==3.5.4
 pydux==0.2.2
@@ -9,4 +12,6 @@ PyQt5==5.14.1
 PyQt5-sip==12.7.1
 requests==2.23.0
 six==1.14.0
+soupsieve==2.0.1
 urllib3==1.25.9
+webencodings==0.5.1
