--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ certifi==2020.4.5.1
 chardet==3.0.4
 html5lib==1.0.1
 idna==2.9
-Inject==3.5.4
 pydux==0.2.2
 PyInstaller==3.6
 requests==2.23.0
@@ -13,3 +12,4 @@ six==1.14.0
 soupsieve==2.0.1
 urllib3==1.25.9
 webencodings==0.5.1
+hexdi
