--- a/app/docker/Dockerfile
+++ b/app/docker/Dockerfile
@@ -11,13 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 FROM ubuntu:22.04
 
-ARG TOKEN
-ENV TOKEN=${TOKEN}
-
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ENV DEBIAN_FRONTEND=noninteractive 
 
-RUN apt-get update --fix-missing
+RUN apt-get -y update --fix-missing
 RUN apt-get -y install apt-utils
 RUN apt-get -y upgrade
 
